@@ -1,5 +1,8 @@
 CHANGES
 
+ - allow staging daemon to check progress by looking for .bcl.gz files (as
+   well as .bcl files)
+
 release 76.5
  - code action on Build only if install target specified
  - global removal of [LastChanged]Version from POD; change VERSION svn declaration to ='0';
